--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@tabler/icons-react": "^3.31.0",
     "@types/react-simple-maps": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -36,7 +37,7 @@
     "dotted-map": "^2.2.3",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.7.3",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
     "next": "15.3.0",
