--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
-    "@mui/material-nextjs": "^7.0.2",
-    "@nextui-org/react": "^2.6.11",
+    "@next/bundle-analyzer": "^15.3.1",
+    "@heroui/react": "2.7.6",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -39,7 +35,6 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
-    "motion": "^12.7.3",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
